--- a/package.json
+++ b/package.json
@@ -8,12 +8,11 @@
   },
   "devDependencies": {
     "zombie": "^4.2.1",
-    "mocha-phantomjs": "^4.0.2",
-    "mocha-phantomjs-core": "^1.3.0",
     "chai": "^3.4.1",
     "mocha": "^2.3.4"
   },
   "scripts": {
+    "start": "node main.js",
     "test": "mocha"
   },
   "repository": {
